# boost_opencv_converter

./: CMakeLists.txt  README.md  boost-python-module.cmake
include/: CvRectConverter.h
src/: CvRectConverter.cpp
